nenolod     2005/09/21 06:40:15 UTC	(20050921-2283)
  Log:
  Some stuff for a future testsuite.
  

  Modified:
	trunk/testsuite/ (File Added) 
	trunk/testsuite/authenticate.t (File Added) 
	trunk/testsuite/burstuser.t (File Added) 
	trunk/testsuite/reguser.t (File Added) 


pfish       2005/09/21 06:04:46 UTC	(20050921-2281)
  Log:
  add chanserv close help
  

  Modified:
	trunk/modules/chanserv/help.c (File Modified) 


nenolod     2005/09/21 00:27:40 UTC	(20050921-2279)
  Log:
  - strlcpy should have been strncpy in this case since we didn't want to null-terminate in replace() yet.
  

  Modified:
	trunk/src/function.c (File Modified) 


jilles      2005/09/19 19:23:33 UTC	(20050919-2277)
  Log:
  room -> channel
  

  Modified:
	trunk/help/cservice/mark (File Modified) 
	trunk/help/nickserv/set_noop (File Modified) 
	trunk/modules/nickserv/myaccess.c (File Modified) 
	trunk/modules/operserv/uptime.c (File Modified) 
	trunk/modules/userserv/myaccess.c (File Modified) 


pfish       2005/09/19 07:23:37 UTC	(20050919-2275)
  Log:
  remove old account stuff from help
  

  Modified:
	trunk/help/cservice/set_neverop (File Deleted) 
	trunk/help/cservice/set_noop (File Deleted) 
	trunk/modules/chanserv/help.c (File Modified) 


jilles      2005/09/18 19:50:18 UTC	(20050918-2273)
  Log:
  Use server_t.userlist in server_eob().
  

  Modified:
	trunk/protocol/charybdis.c (File Modified) 
	trunk/protocol/ratbox.c (File Modified) 


nenolod     2005/09/18 19:36:22 UTC	(20050918-2271)
  Log:
  ditto
  

  Modified:
	trunk/modules/Makefile.in (File Modified) 


nenolod     2005/09/18 19:35:52 UTC	(20050918-2269)
  Log:
  Netsplit stuff and cruft removal from configure.
  

  Modified:
	trunk/configure (File Modified) 
	trunk/configure.ac (File Modified) 
	trunk/contrib/Makefile.in (File Modified) 
	trunk/include/servers.h (File Modified) 
	trunk/src/node.c (File Modified) 


nenolod     2005/09/18 18:38:26 UTC	(20050918-2267)
  Log:
  Fixes.
  

  Modified: